deployment/backend-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "waroenk-backend-deployment"
  namespace: production
spec:
  selector:
    matchLabels:
      app: "waroenk-backend"
  replicas: 5
  template:
    metadata:
      labels:
        app: "waroenk-backend"
    spec:
      containers:
        - image: waroenkumkm/backend:0.5.2
          imagePullPolicy: IfNotPresent
          name: "waroenk-backend"
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              memory: "75Mi"
              cpu: "75m"
            limits:
              memory: "1Gi"
              cpu: "500m"
