deployment/backend-network.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: "waroenk-backend-service"
  namespace: production
spec:
  type: NodePort
  selector:
    app: "waroenk-backend"
  ports:
    - port: 3000
      targetPort: 3000
      name: "backend-port"

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "waroenk-backend-ingress"
  namespace: production
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/limit-rps: "20"
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  tls:
    - hosts:
        - "api.bukawaroenk.co.id"
      secretName: waroenk-tls-production
  rules:
    - host: "api.bukawaroenk.co.id"
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: "waroenk-backend-service"
              servicePort: 3000
